# chacha20

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  args.c  cc20.c  cc20.h  chacha20.c  test.c  util.c
cc20/: Cargo.toml
cc20/src/: main.rs
cmd/: CMakeLists.txt  cc20.c
dependencies/: CMakeLists.txt
include/: poly1305.h
practice/: CMakeLists.txt  chacha20.c
src/: CMakeLists.txt  chacha20_gen_key.c  chacha20_gen_nonce.c  chacha20_impl.h  chacha20_next.c  chacha20_random_bytes.c  chacha20_test.c  lib.rs
src/poly1305/: CMakeLists.txt  poly1305.c  poly1305_impl.h  uint288_t.c  uint288_test_cases.py
src/poly1305/tests/: CMakeLists.txt  poly1305-test.c  poly1305-uint288_t-test.c
src/tests/: CMakeLists.txt  chacha20-quarter-round-test.c  chacha20_test.c
tests/: CMakeLists.txt  chacha20-cipher-operation-test.c  chacha20-gen-nonce-test.c
